[workspace.package]
rust-version = "1.82"
version = "0.4.1"
edition = "2021"
license = "MIT"
publish = false

[workspace]
members = ["crates/*", "datasources/*", "decoders/*", "metrics/*", "examples/*"]
resolver = "2"

[workspace.dependencies]
# bin
carbon-cli = { path = "crates/cli", version = "0.4.1" }
carbon-core = { path = "crates/core", version = "0.4.1" }
carbon-macros = { path = "crates/macros", version = "0.4.1" }
carbon-proc-macros = { path = "crates/proc-macros", version = "0.4.1" }

# datasources
carbon-helius-atlas-ws-datasource = { path = "datasources/helius-atlas-ws-datasource", version = "0.4.1" }
carbon-rpc-block-subscribe-datasource = { path = "datasources/rpc-block-subscribe-datasource", version = "0.4.1" }
carbon-rpc-program-subscribe-datasource = { path = "datasources/rpc-program-subscribe-datasource", version = "0.4.1" }
carbon-rpc-transaction-crawler-datasource = { path = "datasources/rpc-transaction-crawler-datasource", version = "0.4.1" }
carbon-yellowstone-grpc-datasource = { path = "datasources/yellowstone-grpc-datasource", version = "0.4.1" }

# metrics
carbon-log-metrics = { path = "metrics/log-metrics", version = "0.4.1" }
carbon-prometheus-metrics = { path = "metrics/prometheus-metrics", version = "0.4.1" }

# decoders
carbon-jupiter-dca-decoder = { path = "decoders/jupiter-dca-decoder", version = "0.4.1" }
carbon-jupiter-limit-order-2-decoder = { path = "decoders/jupiter-limit-order-2-decoder", version = "0.4.1" }
carbon-jupiter-limit-order-decoder = { path = "decoders/jupiter-limit-order-decoder", version = "0.4.1" }
carbon-jupiter-swap-decoder = { path = "decoders/jupiter-swap-decoder", version = "0.4.1" }
carbon-kamino-lending-decoder = { path = "decoders/kamino-lending-decoder", version = "0.4.1" }
carbon-kamino-vault-decoder = { path = "decoders/kamino-vault-decoder", version = "0.4.1" }
carbon-memo-program-decoder = { path = "decoders/memo-program-decoder", version = "0.4.1" }
carbon-meteora-dlmm-decoder = { path = "decoders/meteora-dlmm-decoder", version = "0.4.1" }
carbon-moonshot-decoder = { path = "decoders/moonshot-decoder", version = "0.4.1" }
carbon-mpl-core-decoder = { path = "decoders/mpl-core-decoder", version = "0.4.1" }
carbon-mpl-token-metadata-decoder = { path = "decoders/mpl-token-metadata-decoder", version = "0.4.1" }
carbon-openbook-v2-decoder = { path = "decoders/openbook-v2-decoder", version = "0.4.1" }
carbon-orca-whirlpool-decoder = { path = "decoders/orca-whirlpool-decoder", version = "0.4.1" }
carbon-pumpfun-decoder = { path = "decoders/pumpfun-decoder", version = "0.4.1" }
carbon-raydium-amm-v4-decoder = { path = "decoders/raydium-amm-v4-decoder", version = "0.4.1" }
carbon-raydium-clmm-decoder = { path = "decoders/raydium-clmm-decoder", version = "0.4.1" }
carbon-raydium-cpmm-decoder = { path = "decoders/raydium-cpmm-decoder", version = "0.4.1" }
carbon-sharky-decoder = { path = "decoders/sharky-decoder", version = "0.4.1" }
carbon-system-program-decoder = { path = "decoders/system-program-decoder", version = "0.4.1" }
carbon-token-program-decoder = { path = "decoders/token-program-decoder", version = "0.4.1" }

# solana
solana-account-decoder = "2.1"
solana-client = "2.1"
solana-sdk = "2.1"
solana-transaction-status = "2.1"
spl-memo = "6.0"
spl-token = "7.0"

# other
anyhow = "1.0"
askama = "0.12"
async-stream = "0.3"
async-trait = { version = "0.1" }
bincode = "1.3"
borsh = { version = "1.5" }
borsh-derive-internal = "0.10"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dialoguer = { version = "0.11", default-features = false, features = ["editor"] }
dotenv = "0.15"
env_logger = "0.11"
flate2 = "1.0"
futures = "0.3"
futures-util = "0.3"
heck = "0.5"
helius = { version = "0.2", git = "https://github.com/helius-labs/helius-rust-sdk.git" }
hex = "0.4"
indicatif = "0.17"
log = "0.4"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
paste = "1.0"
proc-macro2 = "1"
quote = "1.0"
retry = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1.0"
sha2 = "0.10"
syn = { version = "1.0", features = ["full"] }
thiserror = "2.0"
tokio = { version = "1.43" }
tokio-retry = "0.3"
tokio-util = "0.7"
unicode-xid = "0.2"
yellowstone-grpc-client = { version = "5" }
yellowstone-grpc-proto = { version = "5" }

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
