[package]
name = "carbon-cli"
version = "0.4.0"
edition = "2021"
description = "CLI for Carbon"
license = "MIT"

[[bin]]
name = "carbon-cli"
path = "src/main.rs"

[dependencies]
carbon-core = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }

anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
borsh = { version = "1.5", features = ["derive"] }
console = "0.15"
dialoguer = { version = "0.11", default-features = false, features = [
    "editor",
] }
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }
askama = "0.12"
hex = "0.4"
sha2 = "0.10"
heck = "0.5"
