[package]
name = "carbon-core"
version = "0.4.0"
edition = "2021"
description = "Core library for Carbon"
license = "MIT"

[features]
default = ["macros"]
macros = ["carbon-macros", "carbon-proc-macros"]

[dependencies]
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }

async-trait = "0.1"
futures = "0.3"
log = "0.4"
thiserror = "2.0"
tokio = "1.43"
serde = "1.0"
serde_json = "1.0"
bs58 = "0.5"
borsh = { version = "0.10" }
tokio-util = "0.7"

# Optional macro dependencies
carbon-proc-macros = { workspace = true, optional = true }
carbon-macros = { workspace = true, optional = true }

[lib]
crate-type = ["rlib"]
