[package]
name = "carbon-macros"
version = "0.4.0"
edition = "2021"
description = "Macros for Carbon"
license = "MIT"

[dependencies]
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }

hex = "0.4"
paste = "1.0"

[lib]
crate-type = ["rlib"]
