[package]
name = "carbon-rpc-program-subscribe-datasource"
description = "RPC Program Subscribe Datasource"
license = "MIT"
version = "0.4.0"
edition = "2021"

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }

carbon-core = { workspace = true }

tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
