[package]
name = "carbon-rpc-transaction-crawler-datasource"
description = "RPC Transaction Crawler Datasource"
license = "MIT"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }

carbon-core = { workspace = true }

tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
async-stream = "0.3"
retry = "2.0"
futures = "0.3"
tokio-retry = "0.3"
