[package]
name = "carbon-yellowstone-grpc-datasource"
description = "Yellowstone gRPC Datasource"
license = "MIT"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }

carbon-core = { workspace = true }

yellowstone-grpc-proto = { version = "4.2" }
yellowstone-grpc-client = { version = "4.2" }
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
tokio-util = "0.7"
