[package]
name = "pumpfun-alerts-carbon-example"
version = "0.2.1"
edition = "2021"

[dependencies]
carbon-core = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }
carbon-yellowstone-grpc-datasource = { workspace = true }
carbon-pumpfun-decoder = { workspace = true }

tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1.83"
log = "0.4.22"
env_logger = "0.11.5"
dotenvy = "0.15.0"
yellowstone-grpc-proto = { version = "5" }
