[package]
name = "raydium-alerts-carbon-example"
version = "0.2.1"
edition = "2021"

[dependencies]
carbon-core = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }
carbon-yellowstone-grpc-datasource = { workspace = true }
carbon-raydium-amm-v4-decoder = { workspace = true }

yellowstone-grpc-proto = { version = "4.2" }
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1.83"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
